sites/all/themes/loo/css/style.css
/* ... */
#search-block-form input.form-submit:hover,
#search-block-form input.form-submit:focus,
#search-form input.form-submit:hover,
#search-form input.form-submit:focus {
  background-position: center bottom;
}
#search-form .form-item-keys label {
  display: block;
}

/* --------------- Search Results ---------------- */
ol.search-results {
  padding-left: 0;
}
.search-results li {
  border-bottom: 1px solid #d3d7d9;
  padding-bottom: 0.4285em;
  margin-bottom: 0.5em;
}
.search-results li:last-child {
  border-bottom: none;
  padding-bottom: none;
  margin-bottom: 1em;
}
.search-results .search-snippet-info {
  padding-left: 0;
}

/* -------------- Shortcut Links -------------- */

.shortcut-wrapper {
  margin: 2.2em 0 1.1em 0; /* Same as usual h1#page-title margin. */
}
.shortcut-wrapper h1#page-title {
  float: left; /* LTR */
  margin: 0;
}
div.add-or-remove-shortcuts {
  padding-top: 0.9em;
}
.overlay div.add-or-remove-shortcuts {
  padding-top: 0.8em;
}

/* ---------- Admin-specific Theming ---------- */

.page-admin #content img {
  margin-right: 15px; /* LTR */
}
.page-admin #content .simpletest-image img {
  margin: 0;
}
.page-admin-structure-block-demo .block-region {
  background: #ffff66;
  border: 1px dotted #9f9e00;
  color: #000;
  font: 90% "Lucida Grande", "Lucida Sans Unicode", sans-serif;
  margin: 5px;
  padding: 5px;
  text-align: center;
  text-shadow: none;
}
.page-admin-structure-block-demo #featured .block-region {
  font-size: 0.55em;
}
.page-admin-structure-block-demo #header .block-region {
  width: 500px;
}
.page-admin #admin-dblog img {
  margin: 0 5px;
}
/* Fix spacing when Seven is used in the overlay. */
#system-theme-settings fieldset {
  padding: 0;
}
#system-theme-settings fieldset .fieldset-legend {
  margin-top: 0;
}
/* Configuration. */
div.admin .right,
div.admin .left {
  width: 49%;
  margin: 0;
}
div.admin-panel {
  background: #fbfbfb;
  border: 1px solid #ccc;
  margin: 10px 0;
  padding: 0 5px 5px;
}
div.admin-panel h3 {
  margin: 16px 7px;
}
div.admin-panel dt {
  border-top: 1px solid #ccc;
  padding: 7px 0 0;
}
div.admin-panel dd {
  margin: 0 0 10px;
}
div.admin-panel .description {
  margin: 0 0 14px 7px;
}

/* ---------- Overlay layout styles ----------- */

.overlay #main,
.overlay #content {
  width: auto;
  float: none;
}
.overlay #page {
  padding: 0 2em;
}
.overlay .region-page-top,
.overlay #header,
.overlay #page-title,
.overlay #featured,
.overlay #sidebar-first,
.overlay #triptych-wrapper,
.overlay #footer-wrapper {
  display: none;
}
.overlay-processed .field-type-image {
  display: block;
  float: none;
}
.overlay #messages {
  width: auto;
}

/* ---------- Poll ----------- */

.node .poll {
  margin: 2em 0;
}
.node .poll #edit-choice {
  margin: 0 0 1.5em;
}
.poll .vote-form {
  text-align: left; /* LTR */
}
.poll .vote-form .choices {
  margin: 0;
}
.poll .percent {
  font-size: 0.857em;
  font-style: italic;
  margin-bottom: 3em;
  margin-top: -3.2em;
  float: right;
  text-align: right;
}
.poll .text {
  clear: right;
  margin-right: 2.25em;
}
.poll .total {
  font-size: 0.929em;
  font-style: italic;
  text-align: right; /* LTR */
  clear: both;
}
.node .poll {
  margin: 1.8em 0 0;
}
.node .poll .text {
  margin-right: 6.75em;
}
.node .poll #edit-choice {
  margin: 0 0 1.2em;
}
.poll .bar .foreground {
  background-color: #666;
}
#footer-wrapper .poll .bar {
  background-color: #666;
}
#footer-wrapper .poll .bar .foreground {
  background-color: #ddd;
}

/* --- Land of Opportunity --- */

#page-wrapper {
  background: #E6DCC3 url('../images/opportunity-back-3.jpg') no-repeat center top;
  overflow: hidden;
}

#header{
	text-align: center;
	padding-top: 5px;
}

.tabs, .tabs h2 {
  margin: 0;
  line-height: 0;
}

.node-page {
  background: #F5F5F5;
  padding: 10px 14px;
}

.node{
	background: #F5F9E9;
	padding: 10px;
}

div.node-film-clip{
    background: none;
    padding: 0;
}

.tbox .field-name-body{
    width: 570px;
    display: inline-block;
}

.field-collection-container{
    width: 340px;
    display: inline-block;
    background: rgba(25, 42, 53, 0.9);
    vertical-align: top;
}

.field-collection-container .field-name-body{
    width: 100%;
}

.field-collection-view{
	padding: 0;
	margin: 0;
}

.map-link{
	display: inline-block;
	margin: 10px 50px;
}

.node h1{
	font-family: Clarendon, Georgia, serif;
	font-size: 30px;
	font-weight: bold;
	color: #414042;
}

#upload-progress{
width: 0%;
-webkit-transition: width 4s;
-moz-transition: width 4s;
-ms-transition: width 4s;
-o-transition: width 4s;
transition: width 4s;
height: 10px;
background: blue;
padding 3px;
}

#upload-message{
display: none;
}


@font-face {
    font-family: Clarendon;
    src: url(../fonts/Clarendon.otf) format('otf'), url(../fonts/Clarendon.ttf) format('truetype');
}

@font-face {
    font-family: Gloucester;
    src: url(../fonts/Gloucester.otf) format('otf'), url(../fonts/Gloucester.ttf) format('truetype');
}

@font-face {
    font-family: Dokument;
    src: url(../fonts/Dokument.otf) format('otf'), url(../fonts/Dokument.ttf) format('truetype');
}

@font-face {
    font-family: Donatora;
    src: url(../fonts/Donatora.otf) format('otf'), url(../fonts/Donatora.ttf) format('truetype');
}

.old-browser{
    color: #FFCD33;
    font-size: 18px;
    padding: 10px;
    background: #192A35;
    height: 100%;
}

.old-browser ul{
    text-align: left;
}

